Начальное состояние проекта
В данный момент имеем веб-приложение.
Но возникает вопрос:
Как добавить определённый абстрактный слой,
позволяющий работать с данными и отделить
его от представления?

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,9 +1,11 @@
+@import "vendors/bootstrap.css";
+
 body {
   transition: .2s all ease-in;
 }
 
 body.dark {
-  background: #343a40;
+  background: #4c5058;
   color: #fff;
 }
 
